raffia/tests/error/scss/at-rule/function/varargs-with-default.snap
---
source: raffia/tests/error.rs
---
error: expect token `)`, but `:` received
  ┌─ varargs-with-default.scss:1:25
  │
1 │ @function test($param...:"default") {}
  │                         ^


